# AKS-Lab-GitHubCopilot

./: .dockerignore  .env.fqdns  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: agent-builder.agent.md  deploy-engineer.agent.md  mcp-builder.agent.md  orchestrator-architect.agent.md  requirements-analyst.agent.md  test-author.agent.md
.github/instructions/: agent-framework.instructions.md  kubernetes.instructions.md  python.instructions.md
.github/prompts/: feature-from-issue.prompt.md  new-agent.prompt.md  ship-it.prompt.md  spec-to-code.prompt.md
.github/scripts/: diagnose_af.py
.github/skills/a2a-loopback-tests/: SKILL.md
.github/skills/aca-bicep/: SKILL.md
.github/skills/aks-helm/: SKILL.md
.github/skills/copilot-sdk-gpt55/: SKILL.md
.github/skills/maf-agent-skeleton/: SKILL.md
.github/skills/mcp-server-skeleton/: SKILL.md
.github/skills/pydantic-contracts/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
infra/aca/: agent.bicep  deploy.sh
infra/aks/wif/: README.md
labs/lab-01-environment-setup/: README.md
labs/lab-02-agent-creation/: README.md
labs/lab-03-orchestration/: README.md
labs/lab-04-testing/: README.md
labs/lab-05-deployment/: README.md
specs/: lab-05-deploy.md  packaged-stockout-fleet.md
src/: Dockerfile.base
src/agents/inventory/: Dockerfile  __init__.py  agent.py  (+3 more)
src/shared/: copilot.py  server.py  settings.py  telemetry.py
tests/: conftest.py
tests/agents/: __init__.py  _mock.py
tests/evals/: run_evals.py  scenarios.jsonl
(+65 files in other folders)
